GNOME Bugzilla – Bug 631709
Fix gridding for small sizes
Last modified: 2010-10-11 17:47:56 UTC
The patch from 336325 (762e01947e) caused gridding to work wrong when the number of rows/columns in the terminal got small enough that other window elements were larger. * Revert the patch, restoring the previous hack * Make the comment more explanatory to hopefully prevent it being removed in the future. * Add a better fix for 336325 - the problem is essentially that the toplevel was being shown when the notebook was in an inconsistent state. This depends on the cleanup fix from bug 592435 to get everything in the right order.
Created attachment 171968 [details] [review] Fix gridding for small sizes
Comment on attachment 171968 [details] [review] Fix gridding for small sizes Please split the 2 hunks into separate commits. + /* Because of the unexpected reentrancy causd by notebook_page_added_callback() Typo. Can this re-entrancy issue be fixed for gtk3?
(In reply to comment #2) > (From update of attachment 171968 [details] [review]) > Please split the 2 hunks into separate commits. Done. > + /* Because of the unexpected reentrancy causd by > notebook_page_added_callback() > > Typo. Fixed > Can this re-entrancy issue be fixed for gtk3? I'm not going to have time to look at it, but it probably could. The basic idea of a fix would be when inserting a page into an empty notebook to: - Make that page current internally but not emit switch-page - Emit page-added - Emit switch-page (I don't think emitting switch-page before page-added would be a good idea - sounds likely to break a lot of expectations.)
Comment on attachment 171968 [details] [review] Fix gridding for small sizes Fix pushed (as two pieces)
Filed bug 631906 about the GtkNotebook issue